src/Web/Features/Examples/Errors/ClientError.vue
<template>
  Should not be seen
</template>

<script setup>
  throw new Error('client error')
</script>